# bacnet-event-server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml
config/: prometheus.yml  redis.conf  server-config.json
docs/: COMPONENT-DESCRIPTION.md  QA-CONCEPT.md  TEST-PLAN.md  kurrentdb-message-schema.json  server-config-schema.json
include/: bacnet_server.h  health_api.h  kurrentdb_client.h  logging.h  message_handler.h  redis_cache.h
src/: bacnet_server.c  health_api.c  kurrentdb_client.c  logging.c  main.c  message_handler.c  redis_cache.c
tests/: load_generator.py
